ajout verification disponibilité room